Closed Bug 114956 Opened 23 years ago Closed 23 years ago

Crashed on OK to prefs changing all labels' text.

Categories

(SeaMonkey :: MailNews: Message Display, defect, P1)

x86
Windows 98
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.7

People

(Reporter: laurel, Assigned: ssu0262)

Details

Attachments

(2 files, 1 obsolete file)

Using dec 12 commercial trunk build

After changing all five labels' text in preferences dialog, upon OK I crash
sometimes.  I've seen two crashes out of about 5 times doing this (tried on a
couple different profiles).
Attached file talkback 400267
Keywords: nsbeta1
QA Contact: esther → laurel
Attached patch patch to fix crash (obsolete) — Splinter Review
I can't reproduce the crash, but from the talkback report, this patch should
fix the crash.	The first fix in the patch is the real fix for this bug.  The
other two references to mOutliner are just others that I found that were not
being checked for null.

I don't know the cause of mOutliner being null.

Laurel, what kind of system is your win98 machine? (speed, memory)
Dell precision 210, Pentium III, 128 Mb ram.
your bulletproofing approach looks good, marking 0.9.7, as this would be good 
to get into 0.9.7.

instead of 

if (mOutliner)
  mOutliner->Invalidate();

consider:

NS_ASSERTION(mOutliner, "no outliner, see bug #114956");
if (mOutliner)
  mOutliner->Invalidate();

that will turn this bug into an assertion, so if we see it again we can figure 
out what's going on.

sr=sspitzer if you make that change.

something to try:  try changing those pref values when the thread pane is 
empty, or when account central is showing.
Target Milestone: --- → mozilla0.9.7
It still does not crash when the thread pane is empty, or when account central
is showing.
Attachment #61556 - Attachment is obsolete: true
Comment on attachment 61608 [details] [diff] [review]
patch with NS_ASSERTION added

got sr=sspitzer, seeking r=
Attachment #61608 - Flags: superreview+
Comment on attachment 61608 [details] [diff] [review]
patch with NS_ASSERTION added

r=bienvenu
Attachment #61608 - Flags: review+
Keywords: nsbeta1nsbeta1+
Priority: -- → P1
a=asa (on behalf of drivers) for checkin to 0.9.7
Keywords: mozilla0.9.7+
patch checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Looks good so far on win98 using dec17 commercial trunk build.  Have tried many
times changing all labels and was not able to reproduce crash.  Will do some
further testing on other platforms, too, before closing this as verified.
OK using dec18 commercial trunk build: win98, linux rh6.2, mac OS X
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: