fixing bug 114956 - Crashed on OK to prefs changing all labels text.  r=bienvenu, sr=sspitzer, a=asa